# urssi-package

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  sitemap.xml
.github/workflows/: deploy_docs.yml  test.yml
addlive/: index.html
docs/: addlive.md  examples.md
examples/: index.html  threshold_otsu_or_minimum.ipynb
search/: search_index.json
src/urssi_package/: example.py  filters.py
test/: test_example.py
